profiles-service/user-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-profile
  namespace: default
spec:
  selector:
    app: user-profile
  ports:
  - port: 8091
