profiles-service/u-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-ingress
spec:
  backend:
    serviceName: user-profile
    servicePort: 8091
